Serve sections as linked documents from flat dir
This essentially turns the notebook into a wiki-like structure.

All files are saved in a flat directory structure (though this need not
be the case; we'll see how this goes). The ./build script creates
standalone html documents in the target directory, which ./serve will
serve with a python http server. Links work as expected.

--- a/build
+++ b/build
@@ -1,7 +1,12 @@
 #!/bin/bash
 
+set -eo pipefail
+
 if [[ ! -d ./target ]] ; then
-  mkdir target
+    mkdir target
 fi
 
-asciidoctor -r asciidoctor-diagram src/adoc/index.adoc -o target/index.html
+
+find src/adoc -type f -exec \
+    asciidoctor -r asciidoctor-diagram -D target {} ';'
+
